--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@
 title: Brightwave Partners
 email: info@brightwavepartners.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Not only do our partners excel at all aspects of technology, we want to
+  partner with you on your journey to digital excellence. When you work with
+  us, you are not just a customer or a client, you are a partner.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
